--- a/style.css
+++ b/style.css
@@ -1,118 +1,110 @@
-*{
-   padding: 0;
+* {
+    padding: 0;
     margin: 0;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Arial', sans-serif; /* Changed font to Arial */
     box-sizing: border-box;
-    
 }
-body{
+
+body {
     display: flex;
     background: #222;
     align-items: center;
     justify-content: center;
-    height:100vh;
-    
+    height: 100vh;
 }
 
-.card{
-    
-    display:flex;
+.card {
+    display: flex;
     flex-direction: column;
     width: 80%;
     max-width: 500px;
     border-radius: 33px;
     padding: 50px;
-    margin:40px 50px;
+    margin: 40px 50px;
     text-align: center;
-    color:#fff;
-    background: linear-gradient(135deg,#00feba,#5b548a);
+    color: #333; /* Changed text color */
+    background: linear-gradient(135deg, #00feba, #5b548a);
 }
 
-.search{
+.search {
     display: flex;
-    width:100%;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
-    
-
 }
 
-.search input{
-    width:100%;
+.search input {
+    width: 90%;
     border: 0;
     background-color: #ebfffc;
-    color:#555;
-    padding:10px 25px;
-    height:60px;
+    color: #333; /* Changed text color */
+    padding: 10px 25px;
+    height: 60px;
     border-radius: 30px;
     margin-right: 40px;
     font-size: large;
 }
 
-.search button{
-    border:0;
-    outline:0;
-    border-radius: 50%;
-    height:60px;
-    width:60px;
-    cursor:pointer;
-
+.search button {
+    border: 0;
+    outline: 0;
+    border-radius: 45%;
+    height: 60px;
+    width: 70px;
+    cursor: pointer;
 }
 
-.weather ,.weather_information{
+.weather,
+.weather_information {
     display: none;
- }
+}
 
-.weather{
-   
+.weather {
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin:10px;
-    
+    margin: 10px;
 }
-.weather img{
-    
-    width:100%;
-    padding:20px 50px;
+
+.weather img {
+    width: 100%;
+    padding: 20px 50px;
     object-fit: cover;
-   
-    
 }
-.weather h1{
-    
+
+.weather h1 {
     font-size: 100px;
 }
 
-.weather h2{
+.weather h2 {
     font-size: 50px;
 }
-.weather_information{
-    
+
+.weather_information {
     display: flex;
     justify-content: space-between;
-    
-    padding:0 20px;
-    margin:-10px;
-   
-}
-.info{
-    display: flex;
-    
-   
+    padding: 0 20px;
+    margin: -10px;
 }
 
- .info img{
-    width:50px;
+.info {
+    display: flex;
+}
+
+.info img {
+    width: 50px;
     margin-right: 5px;
- }
- .humidity , .wind{
+}
+
+.humidity,
+.wind {
     margin-top: -7px;
     font-size: 30px;
-    margin:0;
- }
+    margin: 0;
+}
 
- .weather ,.weather_information{
+.weather,
+.weather_information {
     display: none;
- }
+}
