--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     background: #222;
     align-items: center;
     justify-content: center;
+    
     height: 100vh;
 }
 
@@ -24,7 +25,9 @@ body {
     margin: 40px 50px;
     text-align: center;
     color: #333; /* Changed text color */
-    background: linear-gradient(135deg, #00feba, #5b548a);
+    
+    background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 55%, #fad0c4 100%);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .search {
